[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/GUI/Panel/Main_Menu_Panel.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/Minecraft.tres" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/GUI/Buttons/NewGame_Button.png" type="Texture" id=4]
[ext_resource path="res://Assets/GUI/Buttons/NewGame_Button_pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/GUI/Buttons/LoadGame_Button.png" type="Texture" id=6]
[ext_resource path="res://Assets/GUI/Buttons/LoadGame_Button_pressed.png" type="Texture" id=7]
[ext_resource path="res://Assets/GUI/Buttons/LoadGame_Button_disabled.png" type="Texture" id=8]
[ext_resource path="res://Assets/GUI/Buttons/Option_Button.png" type="Texture" id=9]
[ext_resource path="res://Assets/GUI/Buttons/Option_Button_pressed.png" type="Texture" id=10]
[ext_resource path="res://Assets/GUI/Buttons/Exit_Button.png" type="Texture" id=11]
[ext_resource path="res://Assets/GUI/Buttons/Exit_Button_pressed.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 54
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="MarginBox" type="MarginContainer" parent="TextureRect"]
editor/display_folded = true
margin_top = -1.05264
margin_right = 672.0
margin_bottom = 311.947
custom_constants/margin_top = 100
custom_constants/margin_left = 380

[node name="VBoxContainer2" type="VBoxContainer" parent="TextureRect/MarginBox"]
margin_left = 380.0
margin_top = 100.0
margin_right = 672.0
margin_bottom = 459.0
custom_constants/separation = 100

[node name="Label" type="Label" parent="TextureRect/MarginBox/VBoxContainer2"]
margin_right = 292.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "City Builder"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/MarginBox/VBoxContainer2"]
margin_top = 155.0
margin_right = 292.0
margin_bottom = 359.0
custom_constants/margin_left = 40

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginBox/VBoxContainer2/MarginContainer"]
margin_left = 40.0
margin_right = 292.0
margin_bottom = 204.0

[node name="New Game" type="TextureButton" parent="TextureRect/MarginBox/VBoxContainer2/MarginContainer/VBoxContainer"]
margin_right = 252.0
margin_bottom = 48.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Load Game" type="TextureButton" parent="TextureRect/MarginBox/VBoxContainer2/MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 252.0
margin_bottom = 100.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_disabled = ExtResource( 8 )

[node name="Options" type="TextureButton" parent="TextureRect/MarginBox/VBoxContainer2/MarginContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 252.0
margin_bottom = 152.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="Exit" type="TextureButton" parent="TextureRect/MarginBox/VBoxContainer2/MarginContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 252.0
margin_bottom = 204.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )

[connection signal="pressed" from="TextureRect/MarginBox/VBoxContainer2/MarginContainer/VBoxContainer/New Game" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="TextureRect/MarginBox/VBoxContainer2/MarginContainer/VBoxContainer/Load Game" to="." method="_on_Load_Game_pressed"]
[connection signal="pressed" from="TextureRect/MarginBox/VBoxContainer2/MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
